# ee-ark

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.nginx.yml  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt  tox.ini
.github/: renovate.json
.github/workflows/: lint_python.yml  release-please.yml
ark/: admin.py  arklet.http  forms.py  middleware.py  models.py  utils.py  views.py
ark/management/commands/: count_arks.py  create_api_key.py  delete_arks.py  fetch_arks.py  make_test_data.py
ark/migrations/: 0004_rename_commitment_ark_rights_ark_format_and_more.py  0005_alter_key_key.py  0006_alter_ark_shoulder.py  0007_alter_shoulder_shoulder.py  0008_alter_shoulder_shoulder_and_more.py  0009_ark_tombstone_fields.py  0010_arkevent.py  0011_rename_ark_ark_crea_047fb2_idx_ark_arkeven_ark_id_8ae507_idx.py  0012_ark_cdn_url_ark_event_name_ark_related_arks.py  0013_alter_ark_related_arks.py  0014_ark_cite_as.py
ark/static/: openapi.yaml
ark/static/admin/css/: ee_theme.css
ark/templates/: info.html  swagger_ui.html
ark/templates/admin/: base_site.html
arklet/: settings.py  urls.py
perftest/: performance_test.py
tests/ark/: test_forms.py  test_models.py  test_utils.py  views_tests.py
ui/: arklet_api.py
