[project]
name = "ee-ark"
version = "0.2.0"
description = "A Python/Django application for minting, binding, and resolving ARK identifiers"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
authors = [
    { name = "Florian Förster", email = "florian.foerster@uni-leipzig.de" },
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dependencies = [
    "Django~=3.2 ; python_version >= '3.7' and python_version < '3.8'",
    "Django>=3.2 ; python_version >= '3.8'",
]

[project.optional-dependencies]
postgres = ["psycopg2 (>=2.7,<3.0)"]
sentry = ["sentry-sdk (>=1.5.12,<2.0.0)"]
environ = ["django-environ (>=0.8.1,<0.9.0)"]
ratelimit = ["django-ratelimit (>=4.0.0)"]

[project.scripts]
server = "server:main"
migrate = "server:migrate"
createsuperuser = "server:createsuperuser"

[project.urls]
Repository = "https://github.com/ffoerster/ee-ark"

[tool.poetry]
packages = [
    { include = "ark" },
    { include = "ark_import" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.14.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint-django = "^2.5.3"
tox = "^3.25.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pylint-pytest = "^1.1.2"
coverage = "^6.4.1"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "arklet.settings"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--reuse-db"

[tool.isort]
profile = "black"

[tool.pylint.main]
load-plugins = ["pylint_django", "pylint_pytest"]
django-settings-module = "arklet.settings"

[tool.pylint.basic]
# Good variable names which should always be accepted, separated by a comma.
good-names = ["i", "j", "k", "e", "ex", "Run", "_", "rf", "pk", "db"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
